--- a/src/components/main/boxes/CardsBox.module.css
+++ b/src/components/main/boxes/CardsBox.module.css
@@ -39,16 +39,19 @@
 
     .cardContent {
         grid-column: 1 / 4;
-        height: 6rem;
+        height: auto;
         margin: 0;
         text-align: center;
         color: #000000;
+        display: flex;
+      
     }
 
     .cardContent p {
-        display: inline-block;
+        padding: 0 2px;
+        /* display: inline-block;
         text-align: center;
-        width: 36rem;
+        width: 36rem; */
     }
 }
 
@@ -97,12 +100,15 @@
         margin: 0;
         text-align: center;
         color: #000000;
+        display: flex;
+      
     }
 
     .cardContent p {
-        display: inline-block;
+        padding: 0 2px;
+        /* display: inline-block;
         text-align: center;
-        width: 36rem;
+        width: 36rem; */
     }
 }
 
@@ -151,12 +157,12 @@
         margin: 0;
         text-align: center;
         color: #000000;
+        display: flex;
+      
     }
 
     .cardContent p {
-        display: inline-block;
-        text-align: center;
-        width: 36rem;
+        padding: 0 2px;
     }
 }
 
@@ -205,12 +211,15 @@
         margin: 0;
         text-align: center;
         color: #000000;
+        display: flex;
+      
     }
 
     .cardContent p {
-        display: inline-block;
+        padding:0 2px;
+        /* display: inline-block;
         text-align: center;
-        width: 36rem;
+        width: 36rem; */
     }
 }
 
@@ -259,11 +268,14 @@
         margin: 0;
         text-align: center;
         color: #000000;
+        display: flex;
+      
     }
 
     .cardContent p {
-        display: inline-block;
+        padding: 0 2px;
+        /* display: inline-block;
         text-align: center;
-        width: 36rem;
+        width: 36rem; */
     }
 }
