--- a/src/components/main/boxes/Encerramento.module.css
+++ b/src/components/main/boxes/Encerramento.module.css
@@ -62,6 +62,7 @@
     grid-column: 1 /2;
     grid-row: 2;
     justify-self: start;
+    align-self: end;
 }
 .imagesLinhas2{
     grid-column: 1 /2;
@@ -72,6 +73,7 @@
     grid-column: 12 /13;
     grid-row: 2;
     justify-self: end;
+    align-self: end;
     transform: scaleX(-1);
 }
 .imagesLinhas4{
@@ -83,10 +85,28 @@
 
 .recapitulandoContent{
     grid-column: 3 / 11;
-    grid-row: 2 / 4;
+    grid-row: 2 /4 ;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
     background-color: #333333;
     border-bottom: 5px solid #FCBA5A;
 }
+
+.recapitulando{    
+   width: 100%;
+   box-sizing: border-box;
+   padding: 30px; 
+}
+
+.recapitulando p{
+    text-indent: 5rem;
+    color: #eee;
+    font-size: 1.5rem;
+    margin-bottom: 4rem;
+}
+
 .header{
     display: flex;
     align-items: center;
