--- a/src/components/main/boxes/GrayBox.module.css
+++ b/src/components/main/boxes/GrayBox.module.css
@@ -7,30 +7,29 @@
         display: grid;
         grid-template-columns: repeat(12, 1fr);
         grid-template-rows: auto 5rem;
-        height: 20rem;
+        height: auto;
     }
 
     .containerflag {
         grid-column: 4 / 10;
         grid-row: 1 / 3;
         display: grid;
-        height: auto;
         margin-top: 3rem;
         grid-template-columns: repeat(5, 1fr);
-        grid-template-rows: .2rem 6.25rem 8rem;
+        grid-template-rows: auto 1fr;
+
     }
 
     .introTxt {
         grid-column: 1 / 6;
-        grid-row: 3 / 4;
-        align-self: flex-start;
         color: white;
         text-indent: 40px;
         font-weight: 350;
+        align-self: flex-start;
     }
 
     .containerflag h1 {
-        grid-column: 1 / 6;
+        grid-column: 1 / 5;
         grid-row: 2;
         color: #eee;
         font-size: 2rem;
@@ -39,24 +38,26 @@
 
     .boxflag {
         grid-column: 5 / 6;
-        grid-row: 2;
-        width: 6.25rem;
-        height: 6.25rem;
         background-color: #FCBA5A;
         justify-self: end;
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-grow: 1;
+        width: 100%;
+        height: auto;
+        aspect-ratio: 1;
     }
 
     .boxflag img {
-        width: 3rem;
-        height: 3rem;   
+        width: 50%;
+        height: auto;   
     }
 
     .containerflag p {
-        grid-column: 1;
+        grid-column: 1 / 6;
         grid-row: 2;
+        align-self: flex-start;
     }
 
     .lines {
@@ -86,30 +87,29 @@
         display: grid;
         grid-template-columns: repeat(12, 1fr);
         grid-template-rows: auto 5rem;
-        height: 20rem;
+        height: auto;
     }
 
     .containerflag {
         grid-column: 4 / 10;
         grid-row: 1 / 3;
         display: grid;
-        height: auto;
         margin-top: 3rem;
         grid-template-columns: repeat(5, 1fr);
-        grid-template-rows: .2rem 6.25rem 8rem;
+        grid-template-rows: auto 1fr;
+
     }
 
     .introTxt {
         grid-column: 1 / 6;
-        grid-row: 3 / 4;
-        align-self: flex-start;
         color: white;
         text-indent: 40px;
         font-weight: 350;
+        align-self: flex-start;
     }
 
     .containerflag h1 {
-        grid-column: 1 / 6;
+        grid-column: 1 / 5;
         grid-row: 2;
         color: #eee;
         font-size: 2rem;
@@ -118,24 +118,26 @@
 
     .boxflag {
         grid-column: 5 / 6;
-        grid-row: 2;
-        width: 6.25rem;
-        height: 6.25rem;
         background-color: #FCBA5A;
         justify-self: end;
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-grow: 1;
+        width: 100%;
+        height: auto;
+        aspect-ratio: 1;
     }
 
     .boxflag img {
-        width: 3rem;
-        height: 3rem;   
+        width: 50%;
+        height: auto;   
     }
 
     .containerflag p {
-        grid-column: 1;
+        grid-column: 1 / 6;
         grid-row: 2;
+        align-self: flex-start;
     }
 
     .lines {
@@ -165,30 +167,29 @@
         display: grid;
         grid-template-columns: repeat(12, 1fr);
         grid-template-rows: auto 5rem;
-        height: 20rem;
+        height: auto;
     }
 
     .containerflag {
         grid-column: 4 / 10;
         grid-row: 1 / 3;
         display: grid;
-        height: auto;
         margin-top: 3rem;
         grid-template-columns: repeat(5, 1fr);
-        grid-template-rows: .2rem 6.25rem 8rem;
+        grid-template-rows: auto 1fr;
+
     }
 
     .introTxt {
         grid-column: 1 / 6;
-        grid-row: 3 / 4;
-        align-self: flex-start;
         color: white;
         text-indent: 40px;
         font-weight: 350;
+        align-self: flex-start;
     }
 
     .containerflag h1 {
-        grid-column: 1 / 6;
+        grid-column: 1 / 5;
         grid-row: 2;
         color: #eee;
         font-size: 2rem;
@@ -197,24 +198,26 @@
 
     .boxflag {
         grid-column: 5 / 6;
-        grid-row: 2;
-        width: 6.25rem;
-        height: 6.25rem;
         background-color: #FCBA5A;
         justify-self: end;
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-grow: 1;
+        width: 100%;
+        height: auto;
+        aspect-ratio: 1;
     }
 
     .boxflag img {
-        width: 3rem;
-        height: 3rem;   
+        width: 50%;
+        height: auto;   
     }
 
     .containerflag p {
-        grid-column: 1;
+        grid-column: 1 / 6;
         grid-row: 2;
+        align-self: flex-start;
     }
 
     .lines {
@@ -235,7 +238,7 @@
     }
 }
 
-/* Estilos para telas menores */
+/* Estilos para tablets em modo retrato e smartphones grandes */
 @media (max-width: 768px) and (min-width: 576px) {
     .boxContainer {
         font-family: 'Roboto Condensed', sans-serif;
@@ -244,61 +247,66 @@
         display: grid;
         grid-template-columns: repeat(12, 1fr);
         grid-template-rows: auto 5rem;
-        height: 20rem;
+        height: auto;
     }
 
     .containerflag {
-        grid-column: 4 / 10;
-        grid-row: 1 / 3;
+        grid-column: 2 / 12;
+        grid-row: auto;
         display: grid;
-        height: auto;
-        margin-top: 3rem;
-        grid-template-columns: repeat(5, 1fr);
-        grid-template-rows: .2rem 6.25rem 8rem;
+        margin-top: 2rem;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: auto 1fr;
+
     }
 
     .introTxt {
-        grid-column: 1 / 6;
-        grid-row: 3 / 4;
-        align-self: flex-start;
+        grid-column: 1 / 5;
         color: white;
-        text-indent: 40px;
+        text-indent: 20px;
         font-weight: 350;
+        font-size: 1rem;
+        align-self: flex-start;
     }
 
     .containerflag h1 {
-        grid-column: 1 / 6;
+        grid-column: 1 / 5;
         grid-row: 2;
         color: #eee;
-        font-size: 2rem;
+        font-size: 1.5rem;
         font-weight: 400;
     }
 
     .boxflag {
-        grid-column: 5 / 6;
+        grid-column: 4 / 5;
         grid-row: 2;
-        width: 6.25rem;
-        height: 6.25rem;
         background-color: #FCBA5A;
         justify-self: end;
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-grow: 1;
+        width: 100%;
+        height: auto;
+        aspect-ratio: 1;
     }
 
     .boxflag img {
-        width: 3rem;
-        height: 3rem;   
+        width: 50%;
+        height: auto;   
     }
 
     .containerflag p {
-        grid-column: 1;
+        grid-column: 1 / 5;
         grid-row: 2;
+        align-self: flex-start;
     }
 
     .lines {
-        grid-column: 1 / 6;
+        grid-column: 1 / 5;
         display: flex;
+        justify-content: center;
+        margin-top: 1rem;
     }
 
     .lineWhite {
@@ -314,8 +322,8 @@
     }
 }
 
-/* Estilos para telas extra pequenas */
-@media (max-width: 576px) and (min-width: 320px) {
+/* Estilos para smartphones pequenos */
+@media (max-width: 576px) {
     .boxContainer {
         font-family: 'Roboto Condensed', sans-serif;
         grid-column: 1 / 13;
@@ -323,71 +331,160 @@
         display: grid;
         grid-template-columns: repeat(12, 1fr);
         grid-template-rows: auto 5rem;
-        height: 20rem;
+        height: auto;
+        padding: 2rem;
     }
 
     .containerflag {
-        grid-column: 4 / 10;
-        grid-row: 1 / 3;
+        grid-column: 1 / 13;
+        grid-row: auto;
         display: grid;
-        height: auto;
-        margin-top: 3rem;
-        grid-template-columns: repeat(5, 1fr);
-        grid-template-rows: .2rem 6.25rem 8rem;
+        margin-top: 2rem;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto 1fr;
+
     }
 
     .introTxt {
-        grid-column: 1 / 6;
-        grid-row: 3 / 4;
-        align-self: flex-start;
+        grid-column: 1 / 3;
         color: white;
-        text-indent: 40px;
+        text-indent: 20px;
         font-weight: 350;
+        font-size: 1rem;
+        align-self: flex-start;
     }
 
     .containerflag h1 {
-        grid-column: 1 / 6;
+        grid-column: 1 / 2;
         grid-row: 2;
         color: #eee;
-        font-size: 2rem;
+        font-size: 1.5rem;
         font-weight: 400;
+        text-align: center;
     }
 
     .boxflag {
-        grid-column: 5 / 6;
-        grid-row: 2;
-        width: 6.25rem;
-        height: 6.25rem;
+        grid-column: 2 /3;
         background-color: #FCBA5A;
         justify-self: end;
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-grow: 1;
+        width: 30%;
+        height: auto;
+        aspect-ratio: 1;
     }
 
     .boxflag img {
-        width: 3rem;
-        height: 3rem;   
+        width: 20%;
+        height: auto;
     }
 
     .containerflag p {
-        grid-column: 1;
-        grid-row: 2;
+        grid-column: 1 / 3;
+        text-align: center;
     }
 
     .lines {
-        grid-column: 1 / 6;
+        grid-column: 1 / 3;
         display: flex;
+        justify-content: center;
+        margin-top: 1rem;
     }
 
     .lineWhite {
-        width: 70%;
+        width: 60%;
         height: 5px;
         background-color: #eee;
     }
 
     .lineOrange {
-        width: 30%;
+        width: 40%;
+        height: 5px;
+        background-color: #FCBA5A;
+    }
+}
+
+/* Estilos para telas extra pequenas */
+@media (max-width: 320px) {
+    .boxContainer {
+        font-family: 'Roboto Condensed', sans-serif;
+        grid-column: 1 / 13;
+        background-color: #555555;
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        grid-template-rows: auto 5rem;
+        height: auto;
+        padding: 1rem;
+    }
+
+    .containerflag {
+        grid-column: 1 / 13;
+        grid-row: auto;
+        display: grid;
+        margin-top: 2rem;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: auto 1fr;
+
+    }
+
+    .introTxt {
+        grid-column: 1 / 13;
+        color: white;
+        text-indent: 10px;
+        font-weight: 350;
+        font-size: 0.875rem;
+        align-self: flex-start;
+    }
+
+    .containerflag h1 {
+        grid-column: 1 / 13;
+        grid-row: 2;
+        color: #eee;
+        font-size: 1.25rem;
+        font-weight: 400;
+        text-align: center;
+    }
+
+    .boxflag {
+        grid-column: 1 / 2;
+        background-color: #FCBA5A;
+        justify-self: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-grow: 1;
+        width: 100%;
+        height: auto;
+        aspect-ratio: 1;
+    }
+
+    .boxflag img {
+        width: 50%;
+        height: auto;
+    }
+
+    .containerflag p {
+        grid-column: 1 / 13;
+        text-align: center;
+    }
+
+    .lines {
+        grid-column: 1 / 13;
+        display: flex;
+        justify-content: center;
+        margin-top: 1rem;
+    }
+
+    .lineWhite {
+        width: 60%;
+        height: 5px;
+        background-color: #eee;
+    }
+
+    .lineOrange {
+        width: 40%;
         height: 5px;
         background-color: #FCBA5A;
     }
