--- a/src/components/main/sanfona/Sanfona.module.css
+++ b/src/components/main/sanfona/Sanfona.module.css
@@ -12,12 +12,14 @@
         grid-column: 4 / 10;
         background-color: #6F2282;
         margin-bottom: 1rem;
+        transition: all 0.3s ease;
     }
 
     .boxSanfona {
         grid-column: 4 / 10;
-        height: 6rem;
         background-color: #eee;
+        overflow: hidden;
+        transition: height 0.3s ease;
     }
 
     .title {
@@ -27,6 +29,12 @@
     .colapse {
         background: none;
         border: none;
+        transform: rotate(0);
+        transition: transform 0.3s ease;
+    }
+
+    .colapse.expanded {
+        transform: rotate(180deg);
     }
 
     .headerSanfona {
@@ -39,14 +47,22 @@
         align-items: center;
         height: 3rem;
         background-color: #6F2282;
+        cursor: pointer;
     }
 
     .bodySanfona {
         display: flex;
         justify-items: center;
         align-items: center;
-        height: 6rem;
         padding: 0 1.8rem;
+        transition: opacity 0.3s ease, max-height 0.3s ease;
+        opacity: 0;
+        max-height: 0;
+    }
+
+    .bodySanfona.expanded {
+        opacity: 1;
+        max-height: 1000px; /* Define um valor grande para permitir a expansão */
     }
 }
 
@@ -64,12 +80,14 @@
         grid-column: 4 / 10;
         background-color: #6F2282;
         margin-bottom: 1rem;
+        transition: all 0.3s ease;
     }
 
     .boxSanfona {
         grid-column: 4 / 10;
-        height: 6rem;
         background-color: #eee;
+        overflow: hidden;
+        transition: height 0.3s ease;
     }
 
     .title {
@@ -79,6 +97,12 @@
     .colapse {
         background: none;
         border: none;
+        transform: rotate(0);
+        transition: transform 0.3s ease;
+    }
+
+    .colapse.expanded {
+        transform: rotate(180deg);
     }
 
     .headerSanfona {
@@ -91,14 +115,22 @@
         align-items: center;
         height: 3rem;
         background-color: #6F2282;
+        cursor: pointer;
     }
 
     .bodySanfona {
         display: flex;
         justify-items: center;
         align-items: center;
-        height: 6rem;
         padding: 0 1.8rem;
+        transition: opacity 0.3s ease, max-height 0.3s ease;
+        opacity: 0;
+        max-height: 0;
+    }
+
+    .bodySanfona.expanded {
+        opacity: 1;
+        max-height: 1000px;
     }
 }
 
@@ -116,12 +148,14 @@
         grid-column: 4 / 10;
         background-color: #6F2282;
         margin-bottom: 1rem;
+        transition: all 0.3s ease;
     }
 
     .boxSanfona {
         grid-column: 4 / 10;
-        height: 6rem;
         background-color: #eee;
+        overflow: hidden;
+        transition: height 0.3s ease;
     }
 
     .title {
@@ -131,6 +165,12 @@
     .colapse {
         background: none;
         border: none;
+        transform: rotate(0);
+        transition: transform 0.3s ease;
+    }
+
+    .colapse.expanded {
+        transform: rotate(180deg);
     }
 
     .headerSanfona {
@@ -143,14 +183,22 @@
         align-items: center;
         height: 3rem;
         background-color: #6F2282;
+        cursor: pointer;
     }
 
     .bodySanfona {
         display: flex;
         justify-items: center;
         align-items: center;
-        height: 6rem;
         padding: 0 1.8rem;
+        transition: opacity 0.3s ease, max-height 0.3s ease;
+        opacity: 0;
+        max-height: 0;
+    }
+
+    .bodySanfona.expanded {
+        opacity: 1;
+        max-height: 1000px;
     }
 }
 
@@ -168,12 +216,14 @@
         grid-column: 4 / 10;
         background-color: #6F2282;
         margin-bottom: 1rem;
+        transition: all 0.3s ease;
     }
 
     .boxSanfona {
         grid-column: 4 / 10;
-        height: 6rem;
         background-color: #eee;
+        overflow: hidden;
+        transition: height 0.3s ease;
     }
 
     .title {
@@ -183,6 +233,12 @@
     .colapse {
         background: none;
         border: none;
+        transform: rotate(0);
+        transition: transform 0.3s ease;
+    }
+
+    .colapse.expanded {
+        transform: rotate(180deg);
     }
 
     .headerSanfona {
@@ -195,14 +251,22 @@
         align-items: center;
         height: 3rem;
         background-color: #6F2282;
+        cursor: pointer;
     }
 
     .bodySanfona {
         display: flex;
         justify-items: center;
         align-items: center;
-        height: 6rem;
         padding: 0 1.8rem;
+        transition: opacity 0.3s ease, max-height 0.3s ease;
+        opacity: 0;
+        max-height: 0;
+    }
+
+    .bodySanfona.expanded {
+        opacity: 1;
+        max-height: 1000px;
     }
 }
 
@@ -220,12 +284,14 @@
         grid-column: 1 / 13;
         background-color: #6F2282;
         margin-bottom: 1rem;
+        transition: all 0.3s ease;
     }
 
     .boxSanfona {
         grid-column: 1 / 13;
-        height: 6rem;
         background-color: #eee;
+        overflow: hidden;
+        transition: height 0.3s ease;
     }
 
     .title {
@@ -235,6 +301,12 @@
     .colapse {
         background: none;
         border: none;
+        transform: rotate(0);
+        transition: transform 0.3s ease;
+    }
+
+    .colapse.expanded {
+        transform: rotate(180deg);
     }
 
     .headerSanfona {
@@ -247,13 +319,21 @@
         align-items: center;
         height: 3rem;
         background-color: #6F2282;
+        cursor: pointer;
     }
 
     .bodySanfona {
         display: flex;
         justify-items: center;
         align-items: center;
-        height: 6rem;
         padding: 0 1.8rem;
+        transition: opacity 0.3s ease, max-height 0.3s ease;
+        opacity: 0;
+        max-height: 0;
+    }
+
+    .bodySanfona.expanded {
+        opacity: 1;
+        max-height: 1000px;
     }
 }
