--- a/src/components/main/boxes/Autores.module.css
+++ b/src/components/main/boxes/Autores.module.css
@@ -1,4 +1,4 @@
-.autorContainer{
+.autorContainer {
     grid-column: 3 / 11;  
     grid-row: 4;
     margin-top: 200px;
@@ -12,35 +12,36 @@
     background-color: #555555;
 }
 
-.headerAutor{
+.headerAutor {
     grid-column: 1 / 9;
     display: flex;
     height: 6.2rem;  
     align-items: center;
     gap: 30px;
-    span{
-        font-family: 'Roboto', sans-serif;
-        color: #FCBA5A;
-        font-size: 1.5rem;
-        font-weight: 600;
-    }
 }
 
-.autorContent{
+.headerAutor span {
+    font-family: 'Roboto', sans-serif;
+    color: #FCBA5A;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+.autorContent {
     grid-column: 1 / 9;
     display: flex;
-    img{
-        align-self: start;
-    }
-   
 }
 
-.biografia{
+.autorContent img {
+    align-self: start;
+}
+
+.biografia {
     display: flex;
     flex-direction: column;
 }
 
-.nome{
+.nome {
     color: #FCBA5A;
     text-transform: uppercase;
     font-size: 2rem;
@@ -48,11 +49,161 @@
     margin-bottom: .5rem;
 }
 
-.texto{
+.texto {
     width: 100%;
     padding: 0 2rem 1rem 2.2rem;
     color: #eee;
     text-align: left;
     text-indent: 3rem;
     font-size: 1.5rem;
+}
+
+/* Estilos para telas médias */
+@media (max-width: 1200px) and (min-width: 992px) {
+    .autorContainer {
+        grid-column: 2 / 12;
+        margin-top: 150px;
+    }
+
+    .headerAutor span {
+        font-size: 1.4rem;
+    }
+
+    .nome {
+        font-size: 1.8rem;
+    }
+
+    .texto {
+        font-size: 1.4rem;
+    }
+}
+
+/* Estilos para telas pequenas */
+@media (max-width: 992px) and (min-width: 768px) {
+    .autorContainer {
+        grid-column: 1 / 13;
+        margin-top: 100px;
+        grid-template-columns: repeat(12, 1fr);
+    }
+
+    .headerAutor {
+        grid-column: 1 / 13;
+    }
+
+    .autorContent {
+        grid-column: 1 / 13;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .autorContent img {
+        width: 100%;
+        height: auto;
+    }
+
+    .biografia {
+        align-items: center;
+        text-align: center;
+    }
+
+    .nome {
+        font-size: 1.6rem;
+        margin-left: 0;
+    }
+
+    .texto {
+        padding: 0 1rem;
+        font-size: 1.2rem;
+        text-indent: 0;
+    }
+}
+
+/* Estilos para tablets em modo retrato e smartphones grandes */
+@media (max-width: 768px) and (min-width: 576px) {
+    .autorContainer {
+        grid-column: 1 / 13;
+        margin-top: 80px;
+        grid-template-columns: repeat(12, 1fr);
+    }
+
+    .headerAutor {
+        grid-column: 1 / 13;
+        gap: 20px;
+    }
+
+    .headerAutor span {
+        font-size: 1.3rem;
+    }
+
+    .autorContent {
+        grid-column: 1 / 13;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .autorContent img {
+        width: 100%;
+        height: auto;
+    }
+
+    .biografia {
+        align-items: center;
+        text-align: center;
+    }
+
+    .nome {
+        font-size: 1.4rem;
+        margin-left: 0;
+    }
+
+    .texto {
+        padding: 0 1rem;
+        font-size: 1.1rem;
+        text-indent: 0;
+    }
+}
+
+/* Estilos para smartphones pequenos */
+@media (max-width: 576px) {
+    .autorContainer {
+        grid-column: 1 / 13;
+        margin-top: 60px;
+        grid-template-columns: repeat(12, 1fr);
+    }
+
+    .headerAutor {
+        grid-column: 1 / 13;
+        gap: 15px;
+    }
+
+    .headerAutor span {
+        font-size: 1.2rem;
+    }
+
+    .autorContent {
+        grid-column: 1 / 13;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .autorContent img {
+        width: 100%;
+        height: auto;
+    }
+
+    .biografia {
+        align-items: center;
+        text-align: center;
+    }
+
+    .nome {
+        font-size: 1.2rem;
+        margin-left: 0;
+    }
+
+    .texto {
+        padding: 0 1rem;
+        font-size: 1rem;
+        text-indent: 0;
+    }
 }
