--- a/src/components/main/boxes/Creditos.module.css
+++ b/src/components/main/boxes/Creditos.module.css
@@ -2,7 +2,6 @@
     grid-column: 3 / 11;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    /* Espaço entre as colunas */
     margin-top: 4rem;
 }
 
@@ -33,4 +32,83 @@
     text-align: left;
     margin-bottom: 1rem;
     color: #FCBA5A;
+}
+
+/* Estilos para telas médias */
+@media (max-width: 1200px) and (min-width: 992px) {
+    .CreditoContainer {
+        grid-column: 2 / 12;
+        margin-top: 3rem;
+    }
+    
+    .coluna {
+        grid-column: span 6;
+    }
+    
+    .titulo {
+        font-size: 1.8rem;
+    }
+}
+
+/* Estilos para telas pequenas */
+@media (max-width: 992px) and (min-width: 768px) {
+    .CreditoContainer {
+        grid-column: 1 / 13;
+        margin-top: 2rem;
+    }
+    
+    .coluna {
+        grid-column: span 12;
+    }
+    
+    .titulo {
+        font-size: 1.6rem;
+    }
+}
+
+/* Estilos para tablets em modo retrato e smartphones grandes */
+@media (max-width: 768px) and (min-width: 576px) {
+    .CreditoContainer {
+        grid-column: 1 / 13;
+        margin-top: 2rem;
+    }
+    
+    .coluna {
+        grid-column: span 12;
+    }
+    
+    .titulo {
+        font-size: 1.5rem;
+        text-align: center;
+    }
+    
+    .credit_item {
+        padding: .5rem;
+    }
+}
+
+/* Estilos para smartphones pequenos */
+@media (max-width: 576px) {
+    .CreditoContainer {
+        grid-column: 1 / 13;
+        margin-top: 2rem;
+        padding: 0 1rem;
+    }
+    
+    .coluna {
+        grid-column: span 12;
+    }
+    
+    .titulo {
+        font-size: 1.4rem;
+        text-align: center;
+    }
+    
+    .credit_item {
+        padding: .5rem;
+    }
+    
+    .credit_item p {
+        font-size: 1rem;
+    }
 }
