--- a/src/components/main/boxes/Encerramento.module.css
+++ b/src/components/main/boxes/Encerramento.module.css
@@ -1,4 +1,4 @@
-.enceramentoContainer{
+.enceramentoContainer {
     grid-column: 1 / 13;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
@@ -58,34 +58,37 @@
     width: 3.12rem;
 }
 
-.imagesLinhas1{
-    grid-column: 1 /2;
+.imagesLinhas1 {
+    grid-column: 1 / 2;
     grid-row: 2;
     justify-self: start;
     align-self: end;
 }
-.imagesLinhas2{
-    grid-column: 1 /2;
+
+.imagesLinhas2 {
+    grid-column: 1 / 2;
     grid-row: 3;
     justify-self: start;
 }
-.imagesLinhas3{
-    grid-column: 12 /13;
+
+.imagesLinhas3 {
+    grid-column: 12 / 13;
     grid-row: 2;
     justify-self: end;
     align-self: end;
     transform: scaleX(-1);
 }
-.imagesLinhas4{
-    grid-column: 12 /13;
+
+.imagesLinhas4 {
+    grid-column: 12 / 13;
     grid-row: 3;
     justify-self: end;
     transform: scaleX(-1);
 }
 
-.recapitulandoContent{
+.recapitulandoContent {
     grid-column: 3 / 11;
-    grid-row: 2 /4 ;
+    grid-row: 2 / 4;
     width: 100%;
     justify-content: center;
     align-items: center;
@@ -94,20 +97,20 @@
     border-bottom: 5px solid #FCBA5A;
 }
 
-.recapitulando{    
-   width: 100%;
-   box-sizing: border-box;
-   padding: 30px; 
+.recapitulando {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 30px;
 }
 
-.recapitulando p{
+.recapitulando p {
     text-indent: 5rem;
     color: #eee;
     font-size: 1.5rem;
     margin-bottom: 4rem;
 }
 
-.header{
+.header {
     display: flex;
     align-items: center;
     height: 5rem;
@@ -115,14 +118,100 @@
     background-color: #eee;
 }
 
-.header img{
+.header img {
     width: 3rem;
     padding: 5px;
 }
 
-.header p{
+.header p {
     font-size: 1.2rem;
     color: #6F2282;
     font-weight: 600;
     margin-left: 10px;
+}
+
+/* Media queries para responsividade */
+
+/* Estilos para tablets e smartphones em modo retrato */
+@media (max-width: 992px) {
+    .headerContent {
+        grid-column: 2 / 12;
+    }
+
+    .recapitulandoContent {
+        grid-column: 2 / 12;
+        padding: 20px;
+    }
+
+    .recapitulando p {
+        text-indent: 2rem;
+        font-size: 1.2rem;
+    }
+
+    .title {
+        font-size: 1.6rem;
+    }
+
+    .subtitle {
+        font-size: 1rem;
+    }
+
+    .flagBox {
+        width: 10rem;
+    }
+
+    .flag {
+        width: 5rem;
+    }
+
+    .flagBox img {
+        width: 2.5rem;
+    }
+}
+
+/* Estilos para smartphones */
+@media (max-width: 576px) {
+    .headerContent {
+        grid-column: 1 / 13;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .recapitulandoContent {
+        grid-column: 1 / 13;
+        padding: 10px;
+    }
+
+    .recapitulando p {
+        text-indent: 1rem;
+        font-size: 1rem;
+    }
+
+    .title {
+        font-size: 1.4rem;
+    }
+
+    .subtitle {
+        font-size: 0.8rem;
+    }
+
+    .flagBox {
+        width: 8rem;
+    }
+
+    .flag {
+        width: 4rem;
+    }
+
+    .flagBox img {
+        width: 2rem;
+    }
+
+    .imagesLinhas1,
+    .imagesLinhas2,
+    .imagesLinhas3,
+    .imagesLinhas4 {
+        display: none;
+    }
 }
