--- a/src/components/main/boxes/ImagemArtigo.module.css
+++ b/src/components/main/boxes/ImagemArtigo.module.css
@@ -15,7 +15,7 @@
 /* Estilos para telas médias */
 @media (max-width: 1200px) and (min-width: 992px) {
     .ImagemArtigo {
-        grid-column: 4 / 10;
+        grid-column: 3 / 11;
         height: auto;
         display: grid;
     }
@@ -29,7 +29,7 @@
 /* Estilos para telas pequenas */
 @media (max-width: 992px) and (min-width: 768px) {
     .ImagemArtigo {
-        grid-column: 4 / 10;
+        grid-column: 2 / 12;
         height: auto;
         display: grid;
     }
@@ -40,10 +40,10 @@
     }
 }
 
-/* Estilos para telas menores */
+/* Estilos para tablets em modo retrato e smartphones grandes */
 @media (max-width: 768px) and (min-width: 576px) {
     .ImagemArtigo {
-        grid-column: 4 / 10;
+        grid-column: 1 / 13;
         height: auto;
         display: grid;
     }
@@ -54,8 +54,8 @@
     }
 }
 
-/* Estilos para telas extra pequenas */
-@media (max-width: 576px) and (min-width: 320px) {
+/* Estilos para smartphones pequenos */
+@media (max-width: 576px) {
     .ImagemArtigo {
         grid-column: 1 / 13;
         height: auto;
