--- a/src/components/main/boxes/Rodape.module.css
+++ b/src/components/main/boxes/Rodape.module.css
@@ -20,3 +20,63 @@
     height: auto;
     width: auto;
 }
+
+/* Estilos para telas médias */
+@media (max-width: 1200px) and (min-width: 992px) {
+    .rodapeContainer {
+        padding: 1rem 0;
+    }
+    
+    .logos {
+        gap: 1.5rem; /* Reduz o espaço entre as logos */
+    }
+
+    .logo {
+        max-height: 90px; /* Ajusta a altura máxima da logo */
+    }
+}
+
+/* Estilos para telas pequenas */
+@media (max-width: 992px) and (min-width: 768px) {
+    .rodapeContainer {
+        padding: 1rem 0;
+    }
+    
+    .logos {
+        gap: 1rem; /* Reduz ainda mais o espaço entre as logos */
+    }
+
+    .logo {
+        max-height: 80px; /* Ajusta a altura máxima da logo */
+    }
+}
+
+/* Estilos para tablets em modo retrato e smartphones grandes */
+@media (max-width: 768px) and (min-width: 576px) {
+    .rodapeContainer {
+        padding: 1rem 0;
+    }
+    
+    .logos {
+        gap: 0.75rem; /* Espaço menor entre as logos */
+    }
+
+    .logo {
+        max-height: 70px; /* Ajusta a altura máxima da logo */
+    }
+}
+
+/* Estilos para smartphones pequenos */
+@media (max-width: 576px) {
+    .rodapeContainer {
+        padding: 0.5rem 0;
+    }
+    
+    .logos {
+        gap: 0.5rem; /* Espaço mínimo entre as logos */
+    }
+
+    .logo {
+        max-height: 60px; /* Ajusta a altura máxima da logo */
+    }
+}
