--- a/src/components/main/boxes/whiteboxes/WhiteBox.module.css
+++ b/src/components/main/boxes/whiteboxes/WhiteBox.module.css
@@ -103,7 +103,7 @@
     }
 }
 
-/* Estilos para telas menores */
+/* Estilos para tablets em modo retrato e smartphones grandes */
 @media (max-width: 768px) and (min-width: 576px) {
     .whiteBoxContent {
         grid-column: 1 / 13;
@@ -115,31 +115,31 @@
     }
 
     .whiteBox {
-        grid-column: 4 / 10;
+        grid-column: 3 / 11;
         font-family: 'Roboto Condensed', sans-serif;
         font-size: 1.2rem;
         font-weight: 400;
     }
 
     .paragTitle {
-        text-indent: 2rem;
+        text-indent: 1.5rem;
     }
 
     .title {
-        margin: 2rem 0;
+        margin: 1.5rem 0;
         display: block;
         color: #6F2282;
         text-transform: uppercase;
-        font-size: 1.5rem;
+        font-size: 1.4rem;
     }
 
     .parag {
-        text-indent: 2rem;
+        text-indent: 1.5rem;
     }
 }
 
-/* Estilos para telas extra pequenas */
-@media (max-width: 576px) and (min-width: 320px) {
+/* Estilos para smartphones pequenos */
+@media (max-width: 576px) {
     .whiteBoxContent {
         grid-column: 1 / 13;
         display: grid;
@@ -147,28 +147,29 @@
         grid-template-columns: repeat(12, 1fr);
         justify-items: center;
         align-items: center;
+        padding: 1rem; /* Adicionado padding para melhor espaçamento em telas pequenas */
     }
 
     .whiteBox {
-        grid-column: 4 / 10;
+        grid-column: 2 / 12;
         font-family: 'Roboto Condensed', sans-serif;
-        font-size: 1.2rem;
+        font-size: 1rem;
         font-weight: 400;
     }
 
     .paragTitle {
-        text-indent: 2rem;
+        text-indent: 1rem;
     }
 
     .title {
-        margin: 2rem 0;
+        margin: 1.5rem 0;
         display: block;
         color: #6F2282;
         text-transform: uppercase;
-        font-size: 1.5rem;
+        font-size: 1.2rem;
     }
 
     .parag {
-        text-indent: 2rem;
+        text-indent: 1rem;
     }
 }
