--- a/src/components/main/boxes/CardsBox.module.css
+++ b/src/components/main/boxes/CardsBox.module.css
@@ -46,9 +46,11 @@
         display: flex;
       
     }
-
+    
     .cardContent p {
-        padding: 0 2px;
+        flex: 1;
+        justify-self: center;
+        padding: 0 5px;
         /* display: inline-block;
         text-align: center;
         width: 36rem; */
@@ -105,6 +107,7 @@
     }
 
     .cardContent p {
+        flex: 1;
         padding: 0 2px;
         /* display: inline-block;
         text-align: center;
@@ -153,7 +156,8 @@
 
     .cardContent {
         grid-column: 1 / 4;
-        height: 6rem;
+        height: auto;
+        padding: 0 4px;
         margin: 0;
         text-align: center;
         color: #000000;
@@ -162,6 +166,7 @@
     }
 
     .cardContent p {
+        flex: 1;
         padding: 0 2px;
     }
 }
@@ -195,7 +200,7 @@
     }
 
     .cardsBox {
-        grid-column: 4 / 10;
+        grid-column: 2 / 12;
         height: auto;
         background-color: #eeeeee;
         display: grid;
@@ -207,15 +212,16 @@
 
     .cardContent {
         grid-column: 1 / 4;
-        height: 6rem;
+        height: auto;
+        padding: 0 4px;
         margin: 0;
         text-align: center;
         color: #000000;
         display: flex;
-      
     }
 
     .cardContent p {
+        flex: 1;
         padding:0 2px;
         /* display: inline-block;
         text-align: center;
@@ -260,6 +266,7 @@
         grid-template-rows: repeat(3, 5.3rem);
         justify-items: stretch;
         align-items: center;
+        margin: 0 1rem;
     }
 
     .cardContent {
@@ -273,7 +280,9 @@
     }
 
     .cardContent p {
+        flex: 1;
         padding: 0 2px;
+        padding-top: 1rem;
         /* display: inline-block;
         text-align: center;
         width: 36rem; */
