--- a/src/components/main/boxes/GrayBox.module.css
+++ b/src/components/main/boxes/GrayBox.module.css
@@ -26,8 +26,9 @@
         text-indent: 40px;
         font-weight: 350;
         align-self: flex-start;
+        font-size: 1.2rem;
     }
-
+    
     .containerflag h1 {
         grid-column: 1 / 5;
         grid-row: 2;
@@ -44,13 +45,13 @@
         justify-content: center;
         align-items: center;
         flex-grow: 1;
-        width: 100%;
+        width: 60%;
         height: auto;
         aspect-ratio: 1;
     }
 
     .boxflag img {
-        width: 50%;
+        width: 40%;
         height: auto;   
     }
 
@@ -265,7 +266,7 @@
         color: white;
         text-indent: 20px;
         font-weight: 350;
-        font-size: 1rem;
+        font-size: 1.5rem;
         align-self: flex-start;
     }
 
@@ -273,7 +274,7 @@
         grid-column: 1 / 5;
         grid-row: 2;
         color: #eee;
-        font-size: 1.5rem;
+        font-size: 2rem;
         font-weight: 400;
     }
 
@@ -332,14 +333,13 @@
         grid-template-columns: repeat(12, 1fr);
         grid-template-rows: auto 5rem;
         height: auto;
-        padding: 2rem;
+        padding: 1rem 1rem;
     }
 
     .containerflag {
         grid-column: 1 / 13;
         grid-row: auto;
         display: grid;
-        margin-top: 2rem;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: auto 1fr;
 
@@ -350,7 +350,7 @@
         color: white;
         text-indent: 20px;
         font-weight: 350;
-        font-size: 1rem;
+        font-size: 1.5rem;
         align-self: flex-start;
     }
 
@@ -358,7 +358,7 @@
         grid-column: 1 / 2;
         grid-row: 2;
         color: #eee;
-        font-size: 1.5rem;
+        font-size: 2rem;
         font-weight: 400;
         text-align: center;
     }
@@ -377,7 +377,7 @@
     }
 
     .boxflag img {
-        width: 20%;
+        width: 50%;
         height: auto;
     }
 
@@ -416,7 +416,7 @@
         grid-template-columns: repeat(12, 1fr);
         grid-template-rows: auto 5rem;
         height: auto;
-        padding: 1rem;
+        /* padding: 1rem; */
     }
 
     .containerflag {
@@ -434,7 +434,7 @@
         color: white;
         text-indent: 10px;
         font-weight: 350;
-        font-size: 0.875rem;
+        font-size: 2rem;
         align-self: flex-start;
     }
 
@@ -442,7 +442,7 @@
         grid-column: 1 / 13;
         grid-row: 2;
         color: #eee;
-        font-size: 1.25rem;
+        font-size: 1.5rem;
         font-weight: 400;
         text-align: center;
     }
@@ -455,13 +455,13 @@
         justify-content: center;
         align-items: center;
         flex-grow: 1;
-        width: 100%;
+        width: 10%;
         height: auto;
         aspect-ratio: 1;
     }
 
     .boxflag img {
-        width: 50%;
+        width: 10%;
         height: auto;
     }
 
