--- a/src/components/main/boxes/Rodape.module.css
+++ b/src/components/main/boxes/Rodape.module.css
@@ -69,14 +69,18 @@
 /* Estilos para smartphones pequenos */
 @media (max-width: 576px) {
     .rodapeContainer {
-        padding: 0.5rem 0;
+        display: flex;
+        flex-direction: column;
+      
     }
     
     .logos {
-        gap: 0.5rem; /* Espaço mínimo entre as logos */
+        justify-content: center;
+        gap:5px
+         /* Espaço mínimo entre as logos */
     }
 
     .logo {
-        max-height: 60px; /* Ajusta a altura máxima da logo */
+        max-height: 40px; /* Ajusta a altura máxima da logo */
     }
 }
