--- a/src/components/multimidia/VideoPlayer.module.css
+++ b/src/components/multimidia/VideoPlayer.module.css
@@ -183,7 +183,7 @@
         font-family: 'Roboto', sans-serif;
         display: grid;
         grid-template-columns: repeat(12, 1fr);
-        grid-template-rows: 9rem auto 3rem;
+        grid-template-rows: 9rem 50rem 3rem;
         justify-content: center;
         background-color: #FCBA5A;
         border-top-left-radius: 100px;
@@ -239,7 +239,7 @@
 
     .playerVideo {
         width: 100%;
-        height: auto;
+        height: 50rem;
     }
 
     .videoFooter {
@@ -261,7 +261,7 @@
         font-family: 'Roboto', sans-serif;
         display: grid;
         grid-template-columns: repeat(12, 1fr);
-        grid-template-rows: 9rem auto 3rem;
+        grid-template-rows: 9rem 30rem 3rem;
         justify-content: center;
         background-color: #FCBA5A;
         border-top-left-radius: 100px;
@@ -317,7 +317,7 @@
 
     .playerVideo {
         width: 100%;
-        height: auto;
+        height: 500rem;
     }
 
     .videoFooter {
@@ -366,7 +366,7 @@
         flex-direction: column;
         align-items: center;
         text-align: center;
-        margin: 1rem 0;
+        margin: .5rem 1rem;
     }
 
     .playerHeader img {
@@ -388,7 +388,6 @@
     }
 
     .playerTitle p {
-        padding-top: 0.5rem;
         font-family: 'Roboto Condensed', sans-serif;
         color: black;
         font-weight: 400;
@@ -397,7 +396,7 @@
 
     .playerVideo {
         width: 100%;
-        height: auto;
+        height: 30rem;
     }
 
     .videoFooter {
